Map reloading working, refreshing on zoom and drag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="RealEstateApp">
+<html ng-app="realestate">
 <head>
   <title>Kinnisvara</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
