--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,40 +1,4 @@
-<h1>Listing listings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Pictures</th>
-      <th>Price</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.title %></td>
-        <td><%= listing.pictures %></td>
-        <td><%= listing.price %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Listing', new_listing_path %>
-
-<style>
-  body { margin:0; padding:0; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
-<div ng-controller="TestController">
+<div ng-controller="MapController">
   <button ng-click="addMarker()">Add</button>
 <leaflet defaults="defaults" center="center" markers="markers" height="480px" width="640px"></leaflet>
 </div>
